fix: set the correct display of the donation and footer blocks on small screens

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -572,6 +572,7 @@
   /*margin-bottom: 20px;*/
   padding: 10px 15px 5px;
   border-radius: 9px;
+  align-self: flex-start;
   display: inline-flex;
   column-gap: 15px;
   background: var(--color-primary);
@@ -636,8 +637,9 @@
   }
 
   .donation__card {
+    align-self: center;
     align-items: center;
-    column-gap: 14px;
+    column-gap: 13px;
     font-size: 15px;
     line-height: 110%;
   }
@@ -736,6 +738,8 @@
 @media screen and (max-width: 767px) {
   .footer__container {
     padding: 30px 3.125% 0;
+    flex-direction: column;
+    align-items: center;
     row-gap: 40px;
   }
 
